<resources>
    <string name="app_name">Kandy Cpass 2.0</string>
    <string name="enter_user_name">User name</string>
    <string name="enter_user_password">User password</string>
    <string name="enter_user_client">User client</string>
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="loading">Loading data...</string>
    <string name="enter_url">Base url</string>
    <string name="enter_message">Enter message</string>

    <string name="enter_private_project_key">Enter Private Project key</string>
    <string name="enter_private_project_secret">Enter Private Project secret</string>

</resources>
