<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/enter_url" />


            <EditText
                android:id="@+id/et_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="nvs-cpaas-oauth.kandy.io" />

            <RadioGroup
                android:id="@+id/rg_login_type_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/rb_password_grant"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_password_grant"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Password Grant"></RadioButton>

                <RadioButton
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Client Credentials"></RadioButton>

            </RadioGroup>

            <LinearLayout
                android:id="@+id/ll_password_grant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/enter_user_name" />


                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="abcd@xyz.com" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/enter_user_password" />

                <EditText
                    android:id="@+id/et_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Test@123"
                    android:inputType="textPassword" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/enter_user_client" />

                <EditText
                    android:id="@+id/et_user_client"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="PUB-test123" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_client_credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/enter_private_project_key" />

                <EditText
                    android:id="@+id/et_client_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="abcd123-12a1-1a12-1234-123a45678b9c" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/enter_private_project_secret" />

                <EditText
                    android:id="@+id/et_client_secret"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />


            </LinearLayout>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorPrimary"
                android:padding="16dp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="14sp" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>